# 2025-Yandex.Practikum-CPP-sprints

./: README.md  lvl10_11_Динамическое приведение типа.txt  lvl10_2_Отношения между классами.txt  lvl10_4_Полиморфизм.txt
lvl10_14_Транспортный справочник - поддержка JSON/: a1.txt  a2.txt
lvl10_5_Наследование - детали/: people.h  supervisor.h
lvl10_6_Абстрактные классы Разработка SVG-библиотеки/: main.cpp  svg.cpp  svg.h
lvl10_7_Интерфейсы_это часть задания на ревю/: main.cpp  svg.cpp  svg.h
lvl10_8_Множественное наследование/: main.cpp  svg.cpp  svg.h
practicum_backups_lvl10/: lvl10_11_Динамическое приведение типа.txt  lvl10_2_Отношения между классами.txt  lvl10_4_Полиморфизм.txt
practicum_backups_lvl11/: lvl11_3_Идея RAII.txt  lvl11_4_RAII в стандартных библиотеках.txt  lvl11_4_Идиома immidiately invoked expression.txt  lvl11_5_Логическая константность и mutable.txt
practicum_backups_lvl12/: lvl12_10_Практика запрещенные домены — копия.txt  lvl12_2_Зачем так мучиться если оно и так работает.txt  lvl12_3_Возврат нескольких значений Распаковка.txt  lvl12_4_Функция vs метод класса.txt  lvl12_5_Совершенный способ Forwarding reference.txt  lvl12_6_Оптовая передача наборы объектов.txt
practicum_backups_lvl13/: lvl13_6_Плотная упаковка.txt
practicum_backups_lvl14/lvl14_4_Собираем CMake om/: CMakeLists.txt  main.cpp
practicum_backups_lvl14/lvl14_5_Основы синтаксиса CMake/: CMakeLists.txt  hmirr.cpp  sobel.cpp  vmirr.cpp
practicum_backups_lvl4/: lvl5_3Измеряем время.txt  main_2Поиск в неотсортированном векторе.txt  main_2Стек.txt  main_3Очередь и дек.txt  (+2 more)
(+306 files in other folders)
